--- a/src/components/SpaceScene/SpaceScene.module.scss
+++ b/src/components/SpaceScene/SpaceScene.module.scss
@@ -9,8 +9,8 @@
 
 .planet1 {
   position: absolute;
-  right: -600px;
-  bottom: -290px;
+  right: 0px;
+  bottom: -280px;
 }
 
 .planet2 {
