--- a/src/pages/Home/Home.module.scss
+++ b/src/pages/Home/Home.module.scss
@@ -1,55 +1,58 @@
 @import "../../styles/styles.scss";
 
+@mixin page {
+  background-color: $primary-dark;
+  font-size: $font-size-2;
+  height: 100vh;
+}
+
+@mixin darker {
+  filter: brightness(50%);
+  opacity: 50%;
+  z-index: 10;
+}
+
 .schedule {
-    background-color: $primary-dark;
-    font-size: $font-size-2;
-    height: 100vh;
-    filter: brightness(50%);
-    opacity: 50%;
-    z-index: 10;
+  @include page;
+  @include darker;
 }
 
 .rules {
-    background-color: $primary-dark;
-    font-size: $font-size-2;
-    height: 100vh;
+  @include page;
+}
+
+.communication {
+  @include page;
+  @include darker;
+}
+
+.resources {
+  @include page;
+}
+
+.prizes {
+  @include page;
+  @include darker;
 }
 
 .home {
-    background-color: $primary-dark;
-    font-size: $font-size-2;
-    height: 100vh;
+  background-color: $primary-dark;
+  font-size: $font-size-2;
+  height: 100vh;
 }
 
 .hero {
-    position: absolute;
-    left: 200px;
-    bottom: 150px;
-    z-index: 10;
+  position: absolute;
+  left: 200px;
+  bottom: 150px;
+  z-index: 10;
 }
 
 .scroll {
-    position: fixed;
-    max-height: 30rem;
-    max-width: 50rem;
-    right: 100px;
-    bottom: 70px;
-    z-index: 20;
-}
-
-.rocket {
-    position: absolute;
-    right: 300px;
-    bottom: 310px;
-    z-index: 10;
-}
-
-.planet1 {
-    position: absolute;
-    right: -600px;
-    bottom: -290px;
-}
-
-.planet2 {
-    position: absolute;
+  position: fixed;
+  max-height: 30rem;
+  max-width: 50rem;
+  right: 100px;
+  bottom: 20px;
+  z-index: 20;
 }
